[gd_scene load_steps=3 format=3 uid="uid://dxjibr4gll2hf"]

[ext_resource type="Theme" uid="uid://yqpckl4q2p5" path="res://temas/tema de boton.tres" id="1_7pmaa"]
[ext_resource type="Script" path="res://scripts/menu inicial.gd" id="1_n2jkf"]

[node name="Node2D" type="Node2D"]
script = ExtResource("1_n2jkf")

[node name="ColorRect" type="ColorRect" parent="."]
offset_left = -9.0
offset_top = -1.0
offset_right = 1150.0
offset_bottom = 642.0
color = Color(0.313726, 0.25098, 0.407843, 1)

[node name="Label" type="Label" parent="."]
offset_left = 468.0
offset_top = 51.0
offset_right = 708.0
offset_bottom = 81.0
text = "seleccion de niveles"

[node name="Button" type="Button" parent="."]
offset_left = 934.0
offset_top = 121.0
offset_right = 1026.0
offset_bottom = 149.0
theme = ExtResource("1_7pmaa")
theme_override_colors/font_color = Color(0.0470588, 0.0431373, 0.266667, 1)
theme_override_font_sizes/font_size = 30
text = "nivel 1"

[node name="Button2" type="Button" parent="."]
offset_left = 936.0
offset_top = 195.0
offset_right = 1097.0
offset_bottom = 233.0
theme = ExtResource("1_7pmaa")
theme_override_colors/font_color = Color(0.0470588, 0.0431373, 0.266667, 1)
theme_override_font_sizes/font_size = 30
text = "nivel 2
"

[node name="Button3" type="Button" parent="."]
offset_left = 941.0
offset_top = 278.0
offset_right = 1033.0
offset_bottom = 306.0
theme = ExtResource("1_7pmaa")
theme_override_colors/font_color = Color(0.0470588, 0.0431373, 0.266667, 1)
theme_override_font_sizes/font_size = 30
text = "nivel 3
"

[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="Button2" to="." method="_on_button_2_pressed"]
[connection signal="pressed" from="Button3" to="." method="_on_button_3_pressed"]
